# MiniMES

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Order.cpp  Order.hpp  OrderManager.cpp  OrderManager.hpp  PartManager.cpp  PartManager.hpp  SocketCommunicator.cpp  SocketCommunicator.hpp  main.cpp  mainRSD.cpp  orders.txt  parts_autosave.txt  test.sh
